--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,6 @@ services:
   name: allen-tx-dashboard
   env: python
   buildCommand: pip install -r requirements.txt
-  startCommand: gunicorn dashboard:server
+  startCommand: python dashboard.py
   plan: free
+
